[package]
name = "rust_metric_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full", "visit"] }
walkdir = "2.5.0"
